--- a/CsvFile/Microsoft.DataTransfer.CsvFile/ConfigurationResources.resx
+++ b/CsvFile/Microsoft.DataTransfer.CsvFile/ConfigurationResources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Sing_Delimiter" xml:space="preserve">
+    <value>Value delimiter</value>
+  </data>
+  <data name="Sink_WriteHeader" xml:space="preserve">
+    <value>Optional. Write header row</value>
+  </data>
   <data name="Source_Decompress" xml:space="preserve">
     <value>Optional. If source files should be decompressed with GZip</value>
   </data>
