--- a/CsvFile/Microsoft.DataTransfer.CsvFile/Resources.resx
+++ b/CsvFile/Microsoft.DataTransfer.CsvFile/Resources.resx
@@ -123,6 +123,9 @@
   <data name="InvalidNumberOfColumnsFormat" xml:space="preserve">
     <value>Invalid number of columns: {0}, expected {1}</value>
   </data>
+  <data name="SinkDescription" xml:space="preserve">
+    <value>Writes data to CSV a file</value>
+  </data>
   <data name="SourceDescription" xml:space="preserve">
     <value>Reads data from CSV files, either one or multiple</value>
   </data>
